<resources>
    <string name="app_name">CalendarProject</string>
    <string name="tab_text_1">CALENDAR</string>
    <string name="tab_text_2">SCHEDULE</string>
    <string name="tab_text_3">EMAIL</string>
    <string name="add_btn">ADD</string>
    <string name="remove_btn">REMOVE</string>
    <string name="clear_btn">CLEAR</string>
    <string name="period_column">PERIOD</string>
    <string name="class_column">CLASS</string>
    <string name="period_1">1</string>
    <string name="period_2">2</string>
    <string name="period_3">3</string>
    <string name="period_4">4</string>
    <string name="period_5">5</string>
    <string name="period_6">6</string>
    <string name="period_7">7</string>
    <string name="blank"></string>
    <string name="add_period_question">Add period?</string>
    <string name="remove_period_question">Remove period?</string>
    <string name="add_event_question">Add event?</string>
    <string name="clear_event_question">Clear events?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="period">PERIOD</string>
    <string name="classs">CLASS</string>
    <string name="date">DATE</string>
    <string name="event">EVENT</string>
    <string name="slash">/</string>
    <string name="address">EMAIL ADDRESS</string>
    <string name="text">TEXT</string>
    <string name="send">SEND</string>
    <string name="clear">CLEAR</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
