<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <!--TableLayout, schedule list-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/tableLayout"
        android:background="@color/black">

        <!--heading-->
        <TableRow>
            <TextView
                android:text="@string/period_column"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:text="@string/class_column"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <!--row 1-->
        <TableRow>
            <TextView
                android:text="@string/period_1"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:text="@string/blank"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <!--row 2-->
        <TableRow>
            <TextView
                android:text="@string/period_2"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:text="@string/blank"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <!--row 3-->
        <TableRow>
            <TextView
                android:text="@string/period_3"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:text="@string/blank"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <!--row 4-->
        <TableRow>
            <TextView
                android:text="@string/period_4"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:text="@string/blank"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <!--row 5-->
        <TableRow>
            <TextView
                android:text="@string/period_5"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:text="@string/blank"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <!--row 6-->
        <TableRow>
            <TextView
                android:text="@string/period_6"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:text="@string/blank"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <!--row 7-->
        <TableRow>
            <TextView
                android:text="@string/period_7"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:text="@string/blank"
                android:textColor="@color/black"
                android:background="@color/white"
                android:padding="4dp"
                android:layout_margin="1dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                />
        </TableRow>

    </TableLayout>

    <!--RelativeLayout, groups buttons together-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp">

        <!--Add button-->
        <Button
            android:id="@+id/addBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/add_btn"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"
            />

        <!--Remove button-->
        <Button
            android:id="@+id/removeBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/addBtn"
            android:text="@string/remove_btn"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"/>

    </RelativeLayout>



</RelativeLayout>