<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:text="@string/add_period_question">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!--TextView, Period label-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/period"
        android:id="@+id/periodTextView"
        android:layout_below="@id/appbar"
        android:padding="8dp"
        android:layout_margin="1dp"/>
    <!--EditText, period input-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:id="@+id/periodEditText"
        android:layout_below="@id/periodTextView"
        android:padding="8dp"
        android:layout_margin="1dp"/>
    <!--TextView, Class label-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/classs"
        android:id="@+id/classTextView"
        android:layout_below="@id/periodEditText"
        android:padding="8dp"
        android:layout_margin="1dp"/>
    <!--EditText, class input-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:id="@+id/classEditText"
        android:layout_below="@id/classTextView"
        android:padding="8dp"
        android:layout_margin="1dp"/>

    <!--RelativeLayout, groups buttons together-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/classEditText"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        >

        <!--Cancel button-->
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"
            />
        <!--Ok button-->
        <Button
            android:id="@+id/okBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cancelBtn"
            android:text="@string/ok"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"/>

    </RelativeLayout>

</RelativeLayout>