<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:text="@string/add_event_question">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!--TextView, Date label-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/date"
        android:id="@+id/dateTextView"
        android:layout_below="@id/appbar"
        android:padding="8dp"
        android:layout_margin="1dp"/>

    <!--RelativeLayout, groups date information together-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:id="@+id/dateEditText"
        android:layout_below="@id/dateTextView"
        android:padding="8dp"
        android:layout_margin="1dp">

        <!--EditText, month input-->
        <EditText
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:id="@+id/monthEditText"
            android:textColor="@color/black"/>
        <!--TextView, first slash-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/slash"
            android:textColor="@color/black"
            android:id="@+id/firstSlash"
            android:layout_toRightOf="@id/monthEditText"/>
        <!--EditText, day input-->
        <EditText
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:id="@+id/dayEditText"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/firstSlash"/>
        <!--Text View, second slash-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/slash"
            android:textColor="@color/black"
            android:id="@+id/secondSlash"
            android:layout_toRightOf="@id/dayEditText"/>
        <!--EditText, year input-->
        <EditText
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/yearEditText"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/secondSlash"/>

    </RelativeLayout>

    <!--TextView, Event label-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/event"
        android:id="@+id/eventTextView"
        android:layout_below="@id/dateEditText"
        android:padding="8dp"
        android:layout_margin="1dp"/>
    <!--EditText, event input-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:id="@+id/eventEditText"
        android:layout_below="@id/eventTextView"
        android:padding="8dp"
        android:layout_margin="1dp"/>

    <!--RelativeLayout, groups buttons together-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventEditText"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        >

        <!--Cancel button-->
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"
            />
        <!--Ok button-->
        <Button
            android:id="@+id/okBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cancelBtn"
            android:text="@string/ok"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"/>

    </RelativeLayout>

</RelativeLayout>